cmake_minimum_required(VERSION 3.13)

add_subdirectory(Sphere)
add_subdirectory(AmbientLight)
add_subdirectory(Camera)
add_subdirectory(Plane)
add_subdirectory(LimitedPlane)
add_subdirectory(Disk)
add_subdirectory(Cone)
add_subdirectory(LimitedCone)
add_subdirectory(PointLight)
add_subdirectory(SpotLight)
add_subdirectory(Cylinder)
add_subdirectory(LimitedCylinder)
add_subdirectory(AntiAliasing)
add_subdirectory(PlainMaterial)
add_subdirectory(ChessBoardMaterial)
add_subdirectory(ZebraMaterial)
add_subdirectory(Torus)
